--- a/proto-ext-whiterabbit/Makefile
+++ b/proto-ext-whiterabbit/Makefile
@@ -4,6 +4,7 @@ D := proto-ext-whiterabbit
 
 OBJ-y += $D/fsm-table.o \
 	$D/hooks.o \
+	$D/helpers.o \
 	$D/state-wr-present.o \
 	$D/state-wr-m-lock.o \
 	$D/state-wr-s-lock.o \
